文件结构优化

--- a/src/test_goalpoint_publisher/CMakeLists.txt
+++ b/src/test_goalpoint_publisher/CMakeLists.txt
@@ -7,6 +7,13 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   roslib
 )
+include(FetchContent)
+FetchContent_Declare(
+  json
+  GIT_REPOSITORY https://github.com/nlohmann/json.git
+  GIT_TAG v3.10.5
+)
+FetchContent_MakeAvailable(json)
 
 catkin_package()
 
