--- a/src/test_goalpoint_publisher/CMakeLists.txt
+++ b/src/test_goalpoint_publisher/CMakeLists.txt
@@ -7,18 +7,11 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   roslib
 )
-include(FetchContent)
-FetchContent_Declare(
-  json
-  GIT_REPOSITORY https://github.com/nlohmann/json.git
-  GIT_TAG v3.10.5
-)
-FetchContent_MakeAvailable(json)
-
+find_package(nlohmann_json REQUIRED)
 catkin_package()
 
 include_directories(${catkin_INCLUDE_DIRS})
 
 add_executable(test_goalpoint_publisher_node src/test_goalpoint_publisher_node.cpp)
-target_link_libraries(test_goalpoint_publisher_node ${catkin_LIBRARIES})
+target_link_libraries(test_goalpoint_publisher_node ${catkin_LIBRARIES} nlohmann_json::nlohmann_json)
 
